--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,10 @@ add_compile_definitions(STAGE_URL="https://dev.dstage.org/stage")
 add_compile_definitions(SETTINGS_URL="https://dev.dstage.org/devices")
 add_compile_definitions(USE_ONLY_NATIVE_DEVICES)
 option(USE_RT_AUDIO "Use RtAudio as audio engine" ON)
-option(GENERATE_TS "Update and generate language files (requires QT6::LinguistTools)" OFF)
+if (UNIX AND NOT APPLE)
+    set(BUILD_APP OFF CACHE BOOL "Disabling App build on Linux")
+endif ()
+option(BUILD_APP "Build app" ON)
 
 include(TestBigEndian)
 TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
@@ -66,7 +69,6 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/libdeviceid EXCLUDE_FROM_ALL)
 #  - udp-discovery-cpp
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/udp-discovery-cpp EXCLUDE_FROM_ALL)
 #  - HRTF Engine
-#add_compile_definitions(USE_UPC_WITHOUT_MEMORY)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/3dti_AudioToolkit EXCLUDE_FROM_ALL)
 #  - plog
 if (NOT TARGET plog)
@@ -85,8 +87,8 @@ if (APPLE)
     set(RTAUDIO_API_PULSE OFF CACHE BOOL "Disabling Pulse on MacOS" FORCE)
 endif ()
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/rtaudio EXCLUDE_FROM_ALL)
-#  - oneTBB
-#add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/oneTBB EXCLUDE_FROM_ALL)
+find_package(cpprestsdk REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 
 #################################################
@@ -178,13 +180,14 @@ target_link_libraries(${PROJECT_NAME}
         DigitalStage::ApiStatic
         DigitalStage::AuthStatic
         DeviceId::DeviceId
-        #TBB::tbb
         Threads::Threads
         udp-discovery
         3dtiAudioToolkitStatic
         LibDataChannel::LibDataChannelStatic
         ${PROJECT_NAME}-resources
         plog
+        cpprestsdk::cpprest
+        OpenSSL::Crypto
         )
 
 
@@ -208,146 +211,157 @@ target_link_libraries(${PROJECT_NAME}-cli
         ${PROJECT_NAME}::${PROJECT_NAME}
         )
 
-
-#################################################
-#
-#   Configure artifact - GUI Application
-#
-#################################################
-find_package(Qt6 COMPONENTS Core Widgets LinguistTools REQUIRED)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/keychain EXCLUDE_FROM_ALL)
-add_executable(${PROJECT_NAME}_app MACOSX_BUNDLE)
-qt_create_translation(QM_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src
-        ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_de.ts
-        ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_fr.ts)
-set_source_files_properties(DigitalStage_de.ts DigitalStage_fr.ts
-        PROPERTIES OUTPUT_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/i18n")
-qt_add_translations(${PROJECT_NAME}_app TS_FILES
-        ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_de.ts
-        ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_fr.ts)
-set_target_properties(${PROJECT_NAME}_app PROPERTIES OUTPUT_NAME "Digital Stage Connector")
-if (APPLE)
-    set(APP_ICON ${CMAKE_CURRENT_SOURCE_DIR}/resources/appicon.icns)
-    set_source_files_properties(${APP_ICON} PROPERTIES
-            MACOSX_PACKAGE_LOCATION "Resources")
-endif (APPLE)
-set_property(TARGET ${PROJECT_NAME}_app PROPERTY AUTOMOC ON)
-set_property(TARGET ${PROJECT_NAME}_app PROPERTY AUTORCC ON)
-set_property(TARGET ${PROJECT_NAME}_app PROPERTY AUTOUIC ON)
-target_sources(${PROJECT_NAME}_app
-        PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/main_app.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/App.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/App.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/TrayIcon.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/TrayIcon.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/LoginDialog.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/LoginDialog.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/LoginDialog.ui
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/KeyStore.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/app/KeyStore.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc
-        ${APP_ICON}
-        ${QM_FILES})
-target_include_directories(${PROJECT_NAME}_app PRIVATE ${Qt6_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME}_app
-        PRIVATE
-        ${PROJECT_NAME}::${PROJECT_NAME}
-        Qt6::Widgets
-        keychain
-        )
-if (APPLE)
-    enable_language(OBJC)
-    find_library(CORE_FOUNDATION Foundation)
-    find_library(AV_FOUNDATION AVFoundation)
+if (BUILD_APP)
+    option(GENERATE_TS "Update and generate language files (requires QT6::LinguistTools)" OFF)
+    #################################################
+    #
+    #   Configure artifact - GUI Application
+    #
+    #################################################
+    find_package(Qt6 COMPONENTS Core Widgets LinguistTools REQUIRED)
+    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/keychain EXCLUDE_FROM_ALL)
+    add_executable(${PROJECT_NAME}_app MACOSX_BUNDLE)
+    qt_create_translation(QM_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src
+            ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_de.ts
+            ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_fr.ts)
+    set_source_files_properties(DigitalStage_de.ts DigitalStage_fr.ts
+            PROPERTIES OUTPUT_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/i18n")
+    qt_add_translations(${PROJECT_NAME}_app TS_FILES
+            ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_de.ts
+            ${CMAKE_CURRENT_SOURCE_DIR}/i18n/DigitalStage_fr.ts)
+    set_target_properties(${PROJECT_NAME}_app PROPERTIES OUTPUT_NAME "Digital Stage Connector")
+    if (APPLE)
+        set(APP_ICON ${CMAKE_CURRENT_SOURCE_DIR}/resources/appicon.icns)
+        set_source_files_properties(${APP_ICON} PROPERTIES
+                MACOSX_PACKAGE_LOCATION "Resources")
+    endif (APPLE)
+    set_property(TARGET ${PROJECT_NAME}_app PROPERTY AUTOMOC ON)
+    set_property(TARGET ${PROJECT_NAME}_app PROPERTY AUTORCC ON)
+    set_property(TARGET ${PROJECT_NAME}_app PROPERTY AUTOUIC ON)
     target_sources(${PROJECT_NAME}_app
-            PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/utils/macos.h
-            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/utils/macos_internal.mm
-            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/utils/macos_internal.h
-            )
+            PUBLIC
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/main_app.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/App.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/App.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/TrayIcon.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/TrayIcon.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/LoginDialog.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/LoginDialog.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/LoginDialog.ui
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/KeyStore.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/src/app/KeyStore.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc
+            ${APP_ICON}
+            ${QM_FILES})
+    target_include_directories(${PROJECT_NAME}_app PRIVATE ${Qt6_INCLUDE_DIRS})
     target_link_libraries(${PROJECT_NAME}_app
             PRIVATE
-            ${CORE_FOUNDATION}
-            ${AV_FOUNDATION}
+            ${PROJECT_NAME}::${PROJECT_NAME}
+            Qt6::Widgets
+            keychain
+
             )
-endif (APPLE)
+    if (APPLE)
+        enable_language(OBJC)
+        find_library(CORE_FOUNDATION Foundation)
+        find_library(AV_FOUNDATION AVFoundation)
+        target_sources(${PROJECT_NAME}_app
+                PRIVATE
+                ${CMAKE_CURRENT_SOURCE_DIR}/src/app/utils/macos.h
+                ${CMAKE_CURRENT_SOURCE_DIR}/src/app/utils/macos_internal.mm
+                ${CMAKE_CURRENT_SOURCE_DIR}/src/app/utils/macos_internal.h
+                )
+        target_link_libraries(${PROJECT_NAME}_app
+                PRIVATE
+                ${CORE_FOUNDATION}
+                ${AV_FOUNDATION}
+                )
+    endif (APPLE)
 
 
-################################################
-#
-#   Bundling
-#
-#################################################
-set_target_properties(${PROJECT_NAME}_app PROPERTIES
-        BUNDLE True
-        MACOSX_BUNDLE_GUI_IDENTIFIER de.tobiashegemann.digital-stage.app
-        MACOSX_BUNDLE_BUNDLE_NAME App
-        MACOSX_BUNDLE_COPYRIGHT MIT
-        MACOSX_BUNDLE_BUNDLE_VERSION ${CMAKE_PROJECT_VERSION}
-        MACOSX_BUNDLE_SHORT_VERSION_STRING ${CMAKE_PROJECT_VERSION}
-        MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/cmake/MacOSXBundleInfo.plist.in
-        MACOSX_BUNDLE_ICON_FILE appicon.icns
-        )
+    ################################################
+    #
+    #   Bundling
+    #
+    #################################################
+    set_target_properties(${PROJECT_NAME}_app PROPERTIES
+            BUNDLE True
+            MACOSX_BUNDLE_GUI_IDENTIFIER de.tobiashegemann.digital-stage.app
+            MACOSX_BUNDLE_BUNDLE_NAME App
+            MACOSX_BUNDLE_COPYRIGHT MIT
+            MACOSX_BUNDLE_BUNDLE_VERSION ${CMAKE_PROJECT_VERSION}
+            MACOSX_BUNDLE_SHORT_VERSION_STRING ${CMAKE_PROJECT_VERSION}
+            MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/cmake/MacOSXBundleInfo.plist.in
+            MACOSX_BUNDLE_ICON_FILE appicon.icns
+            )
+    #################################################
+    #
+    #   Apple: Fix @rpaths and codesigning
+    #
+    #################################################
+    find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "${_qt_bin_dir}")
+    # First use macdeployqt to bundle the qt libs, but do NOT sign yet
+    add_custom_command(TARGET ${PROJECT_NAME}_app POST_BUILD
+            COMMAND "${MACDEPLOYQT_EXECUTABLE}"
+            "$<TARGET_FILE_DIR:${PROJECT_NAME}_app>/../.."
+            -appstore-compliant
+            -always-overwrite
+            COMMENT "Running macdeployqt..."
+            )
+    add_custom_command(TARGET ${PROJECT_NAME}_app POST_BUILD
+            COMMAND
+            ${CMAKE_INSTALL_NAME_TOOL}
+            -change
+            "@rpath/libkeychain.dylib"
+            "@executable_path/../Frameworks/libkeychain.dylib"
+            "$<TARGET_FILE:${PROJECT_NAME}_app>"
+            COMMENT "Fixing libkeychain rpath"
+            VERBATIM
+            )
+    if (CODESIGN_CERTIFICATE_NAME)
+        message(STATUS "Codesinging using ${CODESIGN_CERTIFICATE_NAME}")
+        set(ENV{CODESIGN_ALLOCATE} /Applications/Xcode.app/Contents/Developer/usr/bin/codesign_allocate)
+        add_custom_command(TARGET ${PROJECT_NAME}_app POST_BUILD
+                COMMAND
+                codesign
+                --force
+                --deep
+                --sign "${CODESIGN_CERTIFICATE_NAME}"
+                "$<TARGET_FILE_DIR:${PROJECT_NAME}_app>/../.."
+                COMMENT "Signing app bundle using certificate ${CODESIGN_CERTIFICATE_NAME}..."
+                VERBATIM
+                )
+        #[[add_custom_command(TARGET ${PROJECT_NAME}-cli POST_BUILD
+                COMMAND
+                codesign
+                --force
+                --deep
+                --sign "${CODESIGN_CERTIFICATE_NAME}"
+                "$<TARGET_FILE_DIR:${PROJECT_NAME}-cli>"
+                COMMENT "Signing app bundle using certificate ${CODESIGN_CERTIFICATE_NAME}..."
+                VERBATIM
+                )]]
+    endif (CODESIGN_CERTIFICATE_NAME)
+endif (BUILD_APP)
+
 
 if (CMAKE_BUILD_TYPE MATCHES Release)
+    #################################################
+    #
+    #   Pack
+    #
+    #################################################
     set(CPACK_PACKAGE_HOMEPAGE_URL "https://www.digital-stage.org")
     set(CPACK_PACKAGE_CONTACT "Tobias Hegemann <tobias.hegemann@digital-stage.org")
 
     if (APPLE)
-        #################################################
-        #
-        #   Apple: Fix @rpaths, codesigning and packing
-        #
-        #################################################
-        find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "${_qt_bin_dir}")
-        # First use macdeployqt to bundle the qt libs, but do NOT sign yet
-        add_custom_command(TARGET ${PROJECT_NAME}_app POST_BUILD
-                COMMAND "${MACDEPLOYQT_EXECUTABLE}"
-                "$<TARGET_FILE_DIR:${PROJECT_NAME}_app>/../.."
-                -appstore-compliant
-                -always-overwrite
-                COMMENT "Running macdeployqt..."
-                )
-        add_custom_command(TARGET ${PROJECT_NAME}_app POST_BUILD
-                COMMAND
-                ${CMAKE_INSTALL_NAME_TOOL}
-                -change
-                "@rpath/libkeychain.dylib"
-                "@executable_path/../Frameworks/libkeychain.dylib"
-                "$<TARGET_FILE:${PROJECT_NAME}_app>"
-                COMMENT "Fixing libkeychain rpath"
-                VERBATIM
-                )
-        if (CODESIGN_CERTIFICATE_NAME)
-            message(STATUS "Codesinging using ${CODESIGN_CERTIFICATE_NAME}")
-            set(ENV{CODESIGN_ALLOCATE} /Applications/Xcode.app/Contents/Developer/usr/bin/codesign_allocate)
-            add_custom_command(TARGET ${PROJECT_NAME}_app POST_BUILD
-                    COMMAND
-                    codesign
-                    --force
-                    --deep
-                    --sign "${CODESIGN_CERTIFICATE_NAME}"
-                    "$<TARGET_FILE_DIR:${PROJECT_NAME}_app>/../.."
-                    COMMENT "Signing app bundle using certificate ${CODESIGN_CERTIFICATE_NAME}..."
-                    VERBATIM
-                    )
-            #[[add_custom_command(TARGET ${PROJECT_NAME}-cli POST_BUILD
-                    COMMAND
-                    codesign
-                    --force
-                    --deep
-                    --sign "${CODESIGN_CERTIFICATE_NAME}"
-                    "$<TARGET_FILE_DIR:${PROJECT_NAME}-cli>"
-                    COMMENT "Signing app bundle using certificate ${CODESIGN_CERTIFICATE_NAME}..."
-                    VERBATIM
-                    )]]
-        endif (CODESIGN_CERTIFICATE_NAME)
-        set(CPACK_GENERATOR "DragNDrop")
-        set(CPACK_DMG_VOLUME_NAME "DigitalStageInstaller")
-        set(CPACK_DMG_DS_STORE_SETUP_SCRIPT ${CMAKE_CURRENT_LIST_DIR}/cmake/Packaging_DMGSetup.scpt)
-        set(CPACK_DMG_BACKGROUND_IMAGE ${CMAKE_CURRENT_LIST_DIR}/resources/DMGBackground.tif)
-        set(CPACK_SOURCE_STRIP_FILES "")
+        if (BUILD_APP)
+            set(CPACK_GENERATOR "DragNDrop")
+            set(CPACK_DMG_VOLUME_NAME "DigitalStageInstaller")
+            set(CPACK_DMG_DS_STORE_SETUP_SCRIPT ${CMAKE_CURRENT_LIST_DIR}/cmake/Packaging_DMGSetup.scpt)
+            set(CPACK_DMG_BACKGROUND_IMAGE ${CMAKE_CURRENT_LIST_DIR}/resources/DMGBackground.tif)
+            set(CPACK_SOURCE_STRIP_FILES "")
+        endif (BUILD_APP)
     elseif (WIN32)
         #################################################
         #
@@ -366,3 +380,5 @@ if (CMAKE_BUILD_TYPE MATCHES Release)
     endif ()
     include(CPack)
 endif ()
+
+
