--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -17,6 +17,7 @@ endif ()
 set(CMAKE_PROJECT_VERSION "0.0.1")
 set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR} ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/../cmake/modules)
 
+
 include(TestBigEndian)
 TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
 if (IS_BIG_ENDIAN)
@@ -44,25 +45,14 @@ option(USE_RT_AUDIO "Use RtAudio as audio engine" ON)
 #################################################
 include(${CMAKE_CURRENT_LIST_DIR}/deps/cmrc/CMakeRC.cmake)
 find_package(Threads REQUIRED)
-find_package(libds REQUIRED)
-#  - libdatachannel
-set(NO_WEBSOCKET ON CACHE BOOL "" FORCE)
-set(NO_TESTS ON CACHE BOOL "" FORCE)
-set(NO_EXAMPLES ON CACHE BOOL "" FORCE)
-if (UNIX AND NOT APPLE)
-    set(USE_SYSTEM_SRTP ON CACHE BOOL "" FORCE)
-    set(USE_GNUTLS OFF CACHE BOOL "" FORCE)
-endif ()
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../deps/libdatachannel EXCLUDE_FROM_ALL)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../deps/3dti_AudioToolkit EXCLUDE_FROM_ALL)
-#  - plog
+if (NOT TARGET libds)
+    find_package(libds REQUIRED)
+endif (NOT TARGET libds)
+if (NOT TARGET datachannel)
+    find_package(LibDataChannel REQUIRED)
+endif (NOT TARGET datachannel)
 if (NOT TARGET plog)
-    include(FetchContent)
-    FetchContent_Declare(
-            plog
-            GIT_REPOSITORY https://github.com/SergiusTheBest/plog.git
-    )
-    FetchContent_MakeAvailable(plog)
+    find_package(plog REQUIRED)
 endif ()
 
 
