--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -45,9 +45,9 @@ option(USE_RT_AUDIO "Use RtAudio as audio engine" ON)
 #################################################
 include(${CMAKE_CURRENT_LIST_DIR}/deps/cmrc/CMakeRC.cmake)
 find_package(Threads REQUIRED)
-if (NOT TARGET libds)
-    find_package(libds REQUIRED)
-endif (NOT TARGET libds)
+if (NOT TARGET DigitalStage)
+    find_package(DigitalStage REQUIRED)
+endif (NOT TARGET DigitalStage)
 if (NOT TARGET datachannel)
     find_package(LibDataChannel REQUIRED)
 endif (NOT TARGET datachannel)
