Fixed compile options

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -37,10 +37,6 @@ set(SETTINGS_URL "https://auth.dstage.org" CACHE STRING "Url link to settings pa
 #   Dependencies
 #
 #################################################
-# libds - Digital Stage API
-if (NOT TARGET DigitalStage)
-    find_package(DigitalStage REQUIRED)
-endif (NOT TARGET DigitalStage)
 # DeviceId - Get unique device ID
 if (NOT TARGET DeviceId)
     find_package(DeviceId REQUIRED)
@@ -107,11 +103,11 @@ target_link_libraries(${PROJECT_NAME}
         Qt6::Widgets
         keychain
         )
-target_compile_definitions(${PROJECT_NAME} PRIVATE SIGNUP_URL="${SIGNUP_URL}")
-target_compile_definitions(${PROJECT_NAME} PRIVATE AUTH_URL="${AUTH_URL}")
-target_compile_definitions(${PROJECT_NAME} PRIVATE API_URL="${API_URL}")
-target_compile_definitions(${PROJECT_NAME} PRIVATE STAGE_URL="${STAGE_URL}")
-target_compile_definitions(${PROJECT_NAME} PRIVATE SETTINGS_URL="${SETTINGS_URL}")
+target_compile_definitions(${PROJECT_NAME} PRIVATE SIGNUP_URL=${SIGNUP_URL})
+target_compile_definitions(${PROJECT_NAME} PRIVATE AUTH_URL=${AUTH_URL})
+target_compile_definitions(${PROJECT_NAME} PRIVATE API_URL=${API_URL})
+target_compile_definitions(${PROJECT_NAME} PRIVATE STAGE_URL=${STAGE_URL})
+target_compile_definitions(${PROJECT_NAME} PRIVATE SETTINGS_URL=${SETTINGS_URL})
 if (APPLE)
     enable_language(OBJC)
     find_library(CORE_FOUNDATION Foundation)
